@@ -1,0 +1,18 @@
+# Generated by Django 3.0.4 on 2020-03-27 11:51
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('accounts', '0008_remove_course_grade'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='course',
+            name='description',
+            field=models.TextField(blank=True, null=True),
+        ),
+    ]
