@@ -46,3 +46,8 @@ checks if user's avatar exist shows that, else shows default avatar
 
 مرج با نسخه امیرعلی
 تغییرات من --پاک کردن عکس پروفایل قبلی در صورت جایگزینی ، فارسی سازی ادمین
+
+1399/01/08
+ye image va ye description b modele Course azafe shode ke inarm farsi kn va vase image ha o un descriptions
+ye meqdar defaulti tarif kn ke to safe shopping o lesson azash estefade konim(hanuz jayi azash estefade nashode)
+### in matn hm pak kn kholase hme kararo vaqti khasti ba master merge koni bnvis fqt, ba tarikh bzn to changelog. ###
